# safe-rss-reader

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
safe_rss_reader/: __init__.py  core.py
tests/: test_safe_rss_reader.py
